# adelia3

./: Cargo.toml  README.md  db.sh
static/: styles.css
templates/: board.html  index.html  view_post.html
