[package]
name = "your_project_name"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.7.0"
actix-files = "0.6.6"
actix-multipart = "0.6.2"
futures-util = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
sanitize-filename = "0.5.0"
mime_guess = "2.0.4"
htmlescape = "0.3.1"
rand = "0.8.5"
mysql_async = { version = "0.34.1", features = ["runtime-tokio-rustls"] }
log = "0.4.21"
env_logger = "0.11.3"
